unpackaged/main/default/objects/Section__mdt/fields/Display_Text__c.field-meta.xml
<CustomField>
    <fullName>Display_Text__c</fullName>
    <label>Display Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>