unpackaged/main/default/objects/Section__mdt/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <label>Theme</label>
    <referenceTo>Theme__mdt</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>